# libmcrx

./: .gitignore  BUILD.gn  CPPLINT.cfg  HOWTO.md  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  driad.py  howto.txt  libmcrx-private.h
.github/workflows/: clang-analyzer.yml  coverity-scan.yml  main.yml
include/mcastrx/: libmcastrx.h
include/mcrx/: errors.h  libmcrx.h
src/: .gitignore  libmcastrx-private.h  libmcastrx.c  libmcastrx.pc.in  libmcastrx.sym  libmcrx-private.h  libmcrx.c  libmcrx.pc.in  libmcrx.sym  native.c  wait.c
test/: .gitignore  mcrx-check.c  send.py  test-libmcastrx.c  test-logstr.c  test-rejoin-same.c  test1-libmcrx.c  test2-libmcrx.c
