# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("//build/config/compiler/compiler.gni")

config("libmcrx_config") {
  include_dirs = [ "include" ]
  cflags = [
    "-DLIBMCRX_STATIC"
  ]
}

static_library("mcrx") {
  sources = [
    "src/libmcrx-private.h",
    "src/libmcrx.c",
    "src/native.c",
    "src/wait.c",
  ]

  public_configs = [ ":libmcrx_config" ]

  deps = []

  configs -= [ "//build/config/compiler:chromium_code" ]
  configs += [
    ":libmcrx_config",
    "//build/config/compiler:no_chromium_code",
  ]
}

